// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Message component should render 1`] = `
<DocumentFragment>
  <div
    class="message message--info"
    role="status"
  >
    <div
      class="message__side-border"
    />
    <test-file-stub
      class="message--icon-align-top"
      height="1.125em"
      width="1.125em"
    />
    <div
      class="message__title"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Message component should render with a different level 1`] = `
<DocumentFragment>
  <div
    class="message message--failure"
    role="status"
  >
    <div
      class="message__side-border"
    />
    <test-file-stub
      class="message--icon-align-top"
      height="1.125em"
      width="1.125em"
    />
    <div
      class="message__title"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Message component should render with a subtitle 1`] = `
<DocumentFragment>
  <div
    class="message message--info"
    role="status"
  >
    <div
      class="message__side-border"
    />
    <test-file-stub
      class="message--icon-align-top"
      height="1.125em"
      width="1.125em"
    />
    <div
      class="message__title"
    >
      <div>
        Some content
      </div>
    </div>
    <div
      class="message__subtitle"
    >
      <div>
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Message component should render with a title passed as prop 1`] = `
<DocumentFragment>
  <div
    class="message message--info"
    role="status"
  >
    <div
      class="message__side-border"
    />
    <test-file-stub
      class="message--icon-align-center"
      height="1.125em"
      width="1.125em"
    />
    <div
      class="message__title"
    >
      <h1>
        Test
      </h1>
    </div>
    <div
      class="message__text"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Message component should render without default icon 1`] = `
<DocumentFragment>
  <div
    class="message message--info"
    role="status"
  >
    <div
      class="message__side-border"
    />
    <div
      class="message__title"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
